--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.bunny.net">
 	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500" rel="stylesheet" />
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="/style.css">
 	<link rel="stylesheet" href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css">
 	<title>{{ title }}</title>
 </head>
