--- a/src/_includes/solution.njk
+++ b/src/_includes/solution.njk
@@ -1,12 +1,12 @@
 ---
 layout: base.njk
-permalink: "{{ page.fileSlug }}"
+permalink: "{{ page.fileSlug | url }}"
 ---
 {# tags: {% if  %} #}
 
 <div class="container">
 	{# link to homepage #}
-	<a href="/">Home</a>
+	<a href="{{ '/' | url }}">Home</a>
 	
 	{# problem title #}
 	<h1>{{ title }}</h1>
@@ -21,34 +21,37 @@ permalink: "{{ page.fileSlug }}"
 	
 	<article>
 		{# External Problem URL: binarysearch or Leetcode #}
-		<strong>The Problem</strong>: {% mdExternalLink title, problemUrl %}
+		<span class="content">
+			<strong>The Problem</strong>: {% mdExternalLink title, problemUrl %}
+
+			{# add platform icon #}
+			{% set lc = r/leetcode/g %}
+			{% if lc.test(problemUrl) %}
+				<img src="{{ '/assets/leetcode.png' | url}}"/>
+			{% endif %}
+
+			{% set bs = r/binarysearch/g %}
+			{% if bs.test(problemUrl) %}
+				<img src="{{ '/assets/binarysearch.png' | url}}"/>
+			{% endif %}
+		</span>
 
 		{# Solution rendered from respective markdown files #}
 		{{ content | safe }}
 	</article>
 	
-	{# <aside>
-		<ul>
-		{%- for solution in collections.solutions -%}
-			<li>
-				<a href="/{{ solution.data.page.fileSlug | url_encode }}">{{solution.data.title}}</a>
-			</li>
-		{%- endfor -%}
-		</ul>
-	</aside> #}
-
 	<div class="controls">
     {# navigate previous and next solution #}
     {% if prevSol.url %}
       <p>
         <strong>Previous Solution</strong>: 
-        <a class="previous" href="{{ prevSol.url }}">{{ prevSol.data.title }}</a>
+        <a class="previous" href="{{ prevSol.url | url }}">{{ prevSol.data.title }}</a>
       </p>
     {% endif %}
     {% if nextSol.url %}
       <p>
         <strong>Next Solution</strong>: 
-        <a class="next" href="{{ nextSol.url }}">{{ nextSol.data.title }}</a>
+        <a class="next" href="{{ nextSol.url | url }}">{{ nextSol.data.title }}</a>
       </p>
     {% endif %}
     </div>
