--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,9 +4,23 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.bunny.net">
-	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500" rel="stylesheet" />
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="{{ title }}" />
+	<meta name="description" content="{{ description }}" />
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="{{ title }}" />
+	<meta property="og:title" content="{{ title }}" />
+	<meta property="og:url" content="{{ url }}" />
+	<meta property="og:description" content="{{ description }}" />
+	<meta property="twitter:description" content="{{ description }}" />
+	<meta property="og:image" content="{{ '/assets/social.png' | url }}" />
+	<meta property="twitter:image" content="{{ '/assets/social.png' | url }}" />
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="{{ '/assets/favicon.png' | url }}" type="image/x-icon" />
 	<link rel="stylesheet" href="{{ '/style.css' | url }}">
+	<link rel="preconnect" href="https://fonts.bunny.net">
+	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400|inter:500&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdn.statically.io/gh/PrismJS/prism-themes/447479fc/themes/prism-one-dark.min.css">
 	<title>{{ title }}</title>
 </head>
@@ -14,5 +28,16 @@
 	<main>
 		{{ content | safe }}
 	</main>
+	<footer>
+		{# <p>{{ page.date.getFullYear() }}</p> #}
+		<a href="https://github.com/oneminch"  target="_blank" rel="noopener noreferrer">
+			<img src="{{ '/assets/github.svg' | url }}" alt="Github Icon" />
+			oneminch
+		</a>
+		<a href="https://oneminch.dev"  target="_blank" rel="noopener noreferrer">
+			<img src="{{ '/assets/website.svg' | url }}" alt="Website Icon" />
+			Portfolio
+		</a>
+	</footer>
 </body>
 </html>
