--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 html {
+	font-size: 16px;
 	padding: 2rem 1rem;
 }
 
@@ -11,35 +12,20 @@ body {
 	max-width: 768px;
 }
 
+body > * {
+	width: 100%;
+}
+
 * {
 	transition: all 0.2s;
+	scroll-behavior: smooth;
 	scrollbar-width: thin;
+	line-height: 1.5;
 }
 
 a {
-	text-decoration: underline #edae49 solid 0.2rem;
 	text-underline-offset: 0.35rem;
 	color: #f1f3f5;
-}
-
-.content {
-	display: inline-flex;
-	align-items: center;
-}
-
-.content > a[href*="https://"]
-{
-	margin-left: 0.25rem;
-}
-
-a[href*="https://"] + img
-{
-	width: 1.5rem;
-	height: 1.5rem;
-	object-fit: contain;
-	border-radius: 50%;
-	margin-left: 0.5rem;
-	flex-shrink: 0;
 }
 
 ul {
@@ -48,23 +34,9 @@ ul {
 }
 
 li {
+	height: 2rem;
 	margin-bottom: 0.5rem;
 	list-style-type: square;
-}
-
-.tags {
-	margin-bottom: 1.5rem;
-}
-
-.tags > code {
-	display: inline-block;
-	margin-bottom: 0.25rem;
-	background-color: #495057;
-	color: #f8f9fa;
-	padding: 0.25rem 0.75rem;
-	border-radius: 999px;
-	font-size: 0.85rem;
-	line-height: 1;
 }
 
 pre,
@@ -83,6 +55,104 @@ pre {
 pre,
 pre code {
 	background-color: #343a40 !important;
+}
+
+img {
+	overflow: hidden;
+}
+
+main {
+	margin-bottom: 5rem;
+}
+
+footer > * {
+	flex-shrink: 0;
+}
+
+footer a {
+	height: 1.75rem;
+	background-color: #495057;
+	padding-right: 0.5rem;
+	overflow: hidden;
+	border-radius: 0.25rem;
+	margin-right: 0.5rem;
+	text-decoration: none;
+	display: inline-flex;
+	align-items: center;
+}
+
+footer img {
+	max-width: 1.25rem;
+	height: 100%;
+	margin-right: 0.5rem;
+	padding: 0.25rem;
+	background-color: #e9ecef;
+}
+
+.solution > .header {
+	display: flex;
+	gap: 0.5rem;
+	align-items: center;
+	font-size: 1.25rem;
+	font-weight: bold;
+}
+
+.solution > .header > a {
+	text-decoration: none;
+}
+
+a,
+.solution > .header > a:hover {
+	text-decoration: underline #edae49 solid 0.1rem;
+}
+
+.solution > .header > svg {
+	width: 0.85rem;
+	height: 0.85rem;
+	color: #edae49;
+	stroke-width: 0.25rem;
+}
+
+.solution > .header > * {
+	flex-shrink: 0;
+	/* border: 0.1px solid red; */
+}
+
+.content {
+	display: block;
+	max-width: 100%;
+	position: relative;
+	min-height: 1.5rem;
+}
+
+.content > a[href*="https://"]
+{
+	margin-left: 0.25rem;
+}
+
+.content > img {
+	width: 1.5rem;
+	height: 1.5rem;
+	position: absolute;
+	display: inline-block;
+	object-fit: contain;
+	border-radius: 50%;
+	margin-left: 0.5rem;
+}
+
+.tags {
+	margin-bottom: 1.5rem;
+}
+
+.tags > code {
+	display: inline-block;
+	margin-bottom: 0.5rem;
+	background-color: #495057;
+	color: #f8f9fa;
+	padding: 0.25rem 0.75rem;
+	border-radius: 999px;
+	font-size: 0.85rem;
+	line-height: 1;
 }
 
 @media screen and (min-width: 1280px) {
