--- a/src/_includes/partials/pre-main.njk
+++ b/src/_includes/partials/pre-main.njk
@@ -7,7 +7,7 @@
 		<!-- http headers -->
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
+			content="default-src 'self'; base-uri 'self'; font-src 'self' https://fonts.bunny.net; img-src 'self'; script-src 'self'; style-src 'self' https://fonts.bunny.net https://cdn.statically.io 'unsafe-inline';" />
 		<meta http-equiv="X-XSS-Protection" content="1;mode=block" always />
 		<meta http-equiv="X-Content-Type-Options" content="'nosniff' always" />
 		<meta name="referrer" content="no-referrer" />
