--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body > * {
 	word-wrap: anywhere;
 }
 
+h1, h2 
+{
+  font-size: 1.5rem;
+}
+
 a {
 	color: #f1f3f5;
 	text-decoration: none;
@@ -143,6 +148,7 @@ a,
 	margin-left: 0.25rem;
 }
 
+li > img,
 .content > img {
 	width: 1.5rem;
 	height: 1.5rem;
@@ -151,6 +157,12 @@ a,
 	object-fit: contain;
 	border-radius: 50%;
 	margin-left: 0.5rem;
+}
+
+li > img {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-top: 0.25rem;
 }
 
 .tags {
